# omi

desktop-windows/: .gitignore  Cargo.toml  README.md
desktop-windows/.github/workflows/: windows.yml
desktop-windows/crates/omi-native/: Cargo.toml
desktop-windows/crates/omi-native/src/: lib.rs
desktop-windows/crates/omi-native/src/audio/: mic.rs  mixer.rs  mod.rs  resample.rs  system_audio.rs  vad_gate.rs
desktop-windows/crates/omi-native/src/platform/: mod.rs
desktop-windows/crates/omi-native/src/rewind/: mod.rs
desktop-windows/crates/omi-native/src/screen/: mod.rs
desktop-windows/crates/omi-native/src/transcription/: mod.rs
desktop-windows/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-windows/tauri-app/src-tauri/capabilities/: default.json
desktop-windows/tauri-app/src-tauri/icons/: icon.icns
desktop-windows/tauri-app/src-tauri/src/: cloud.rs  main.rs  oauth.rs  state.rs
desktop-windows/tauri-app/src-tauri/src/commands/: audio.rs  mod.rs  settings.rs
desktop-windows/tauri-app/src-tauri/src/windows/: floating_bar.rs  mod.rs  tray.rs
desktop-windows/tauri-app/ui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop-windows/tauri-app/ui/src/: App.tsx  index.css
desktop-windows/tauri-app/ui/src/components/: BrainMap.tsx  ConversationDetail.tsx  PageHeader.tsx  RecordButton.tsx  Sidebar.tsx  Toggle.tsx
desktop-windows/tauri-app/ui/src/components/ui/: button.tsx
desktop-windows/tauri-app/ui/src/lib/: api.ts  firebase.ts  utils.ts
desktop-windows/tauri-app/ui/src/pages/: AppsPage.tsx  ChatPage.tsx  ComingSoonPage.tsx  ConversationsPage.tsx  FloatingBar.tsx  HomePage.tsx  LiveTranscriptPage.tsx  MemoriesPage.tsx  Onboarding.tsx  RewindPage.tsx  SettingsPage.tsx  TasksPage.tsx
desktop-windows/tauri-app/ui/src/store/: useAuthStore.ts  useOnboardingStore.ts  useRecordingStore.ts  useTranscriptStore.ts
