[package]
name = "omi-desktop-windows"
version = "0.1.0"
edition = "2021"
description = "Omi desktop for Windows (Tauri shell over the reused Rust backend)"
default-run = "omi-desktop-windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"      # replaces ProactiveAssistants/NotificationService.swift
tauri-plugin-autostart = "2"         # launch-at-login
tauri-plugin-global-shortcut = "2"   # floating-bar hotkey (replaces PushToTalkManager.swift)
tauri-plugin-http = "2"              # CORS-free fetch to api.omi.me (backend has no CORS)

omi-native = { path = "../../crates/omi-native" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cloud audio streaming (WebSocket to api.omi.me/v4/web/listen)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
crossbeam-channel = "0.5"

# Desktop Google OAuth (loopback flow): open system browser + catch redirect
open = "5"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[features]
# Tauri's default custom-protocol feature for production bundles.
custom-protocol = ["tauri/custom-protocol"]
